--- a/about.css
+++ b/about.css
@@ -49,7 +49,7 @@ header {
 
 .box a:hover {
   text-decoration: none;
-  color: #06934c;
+  color: #e3f0ea;
   font-weight: 500;
   transition: 0.05s;
 }
