video slides update

--- a/index.css
+++ b/index.css
@@ -68,7 +68,7 @@ section{
   display: flex;
   justify-content: center;
   flex-direction: column;
-  background: #e0ece6;
+  background: #06934c;
 }
 
 .home:before{
